--- a/charingcross/templates/repo.html
+++ b/charingcross/templates/repo.html
@@ -7,7 +7,8 @@
     <thead>
       <tr>
         <th>Milestone</th>
-        <th>Item</th>
+	<th>Item</th>
+	<th>Priority</th>
         <th>Status</th>
       </tr>
     </thead>
@@ -21,7 +22,8 @@
                 {% if milestone.description %}<p><small>{{ milestone.description }}</small></p>{% endif %}
               </th>
             {% endif %}
-            <td><a href="{{ issue.html_url }}" target="_blank">{{ issue.title }}</a></td>
+	    <td><a href="{{ issue.html_url }}" target="_blank">{{ issue.title }}</a></td>
+	    <td><strong>{{ issue.priority }}</strong></td>
             {% if issue.extended_state == "closed" %}
               <td class="bg-success">Done</td>
             {% elif issue.extended_state == "in-progress" %}
